Fixed the spacing issues, the logo needs...

--- a/src/app/LandingPage/landingpagecomponent/landingpagecomponent.component.css
+++ b/src/app/LandingPage/landingpagecomponent/landingpagecomponent.component.css
@@ -137,6 +137,15 @@
   }
 }
 
+img{
+  max-width: 100%;
+  height: auto;
+  width: auto\9;
+  justify-content: center;
+  align-items: center;
+
+}
+
 #companylogo{
   display: flex;
   justify-content: center;
